30_applications/games/mud_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mud-server
  namespace: games
  labels:
    app.kubernetes.io/instance: mud
    app.kubernetes.io/name: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: mud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: mud
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: mud
          image: ghcr.io/pixil98/mud:v0.0.9
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          command: ["/app/mud"]
          args: ["--config", "/app/config.json"]
          ports:
            - name: telnet
              containerPort: 4000
              protocol: TCP
            - name: ssh
              containerPort: 4022
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: characters
              mountPath: /app/assets/characters
      volumes:
        - name: characters
          persistentVolumeClaim:
            claimName: mud-server-characters
