30_applications/games/romm_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm-server
  namespace: games
  labels:
    app.kubernetes.io/name: romm
    app.kubernetes.io/instance: romm
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: romm
    app.kubernetes.io/instance: romm
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
